<resources>
    <string name="app_name">Show3D</string>
    <string name="open_file">打开</string>
    <string name="frequently_used">常用</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>

    <string name="stl_load_progress_message">请等一会.</string>
    <string name="model_load_progress_title">文件加载中, 请稍后</string>
    <string name="error_fetch_data">STL 文件解析失败.</string>
    <string name="error_outbig"> 文件过大，解析失败！</string>
    <string name="close_dialog">关闭对话框</string>
    <string name="parent_directory">父目录</string>
    <string name="choose_stl_file">选择STL文件</string>

    <string name="text_stl">STL</string>
    <string name="text_obj">OBJ</string>
    <string name="text_ds">3DS</string>
    <string name="text_location">位置</string>
    <string name="text_phone">手机</string>
    <string name="text_command">常用</string>
    <string name="text_open">打开</string>
    <string name="text_render_setting">渲染设置</string>
    <string name="text_render_line">线渲染</string>
    <string name="text_render_face">面渲染</string>
    <string name="text_show_setting">显示设置</string>
    <string name="text_show_coordinate">显示坐标</string>
    <string name="text_show_grid">显示网格</string>
    <string name="text_dir_name">目录名</string>
    <string name="text_file_dir_name">文件夹名称</string>
    <string name="text_file_name">文件名</string>
    <string name="text_qq">QQ</string>
    <string name="text_download">Download</string>
    <string name="text_document">我的文档</string>
    <string name="text_weixin">微信</string>
    <string name="text_open_root_dir">打开手机目录</string>
    <string name="text_search_stl">查找stl文件</string>
    <string name="text_search_obj">查找obj文件</string>
    <string name="text_search_ds">查找3ds文件</string>
    <string name="text_file_not_exist">文件不存在</string>

    <string name="tip_file_maybe_analysis_fail">文件大于10M可能会解析失败</string>
    <string name="tip_share_to">分享到</string>
    <string name="tip_already_delete_record">已删除该记录</string>
    <string name="tip_is_delete_invalid_file">文件无效，是否删除？</string>
    <string name="tip_cancel">撤销</string>


    <string name="app_description">这是一个浏览3D文件的app, 目前支持的文件格式有比较常用的STL、OBJ和3DS格式，暂不支持dwg、stp、igs等格式，将继续完善。</string>
    <string name="author_email">Email： dyman_zy@163.com</string>
    <string name="author_gitHub">GitHub： https://github.com/DymanZy</string>
    <string name="contact">如使用过程有任意疑问或建议，可以联系我。</string>
</resources>
