<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="250dp"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/text_show_setting"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_round_up_green_dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@color/white">

        <Switch
            android:id="@+id/showLines_switch_dialog_show_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/text_show_coordinate"
            android:textColor="@color/blank"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@drawable/bg_round_down_white">
        <Switch
            android:id="@+id/showGrids_switch_dialog_show_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/text_show_grid"
            android:textColor="@color/blank"/>

    </LinearLayout>




</LinearLayout>