<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.dyman.show3dmodel.ui.OpenFileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_activity_openFile"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/open_file"
            app:navigationIcon="@mipmap/abc_ic_ab_back_mtrl_am_alpha"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white_FF">
                <RelativeLayout
                    android:id="@+id/stlFile_rl_activity_open_file"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:background="?android:selectableItemBackground">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/ic_file_stl"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/text_stl"
                        android:layout_marginTop="50dp"
                        android:padding="5dp"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/cutOff"/>
                <RelativeLayout
                    android:id="@+id/objFile_rl_activity_open_file"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:background="?android:selectableItemBackground">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/ic_file_obj"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/text_obj"
                        android:layout_marginTop="50dp"
                        android:padding="5dp"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/cutOff"/>
                <RelativeLayout
                    android:id="@+id/d3sFile_rl_activity_open_file"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:background="?android:selectableItemBackground">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/ic_file_ds"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/text_ds"
                        android:layout_marginTop="50dp"
                        android:padding="5dp"/>
                </RelativeLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/cutOff"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_location"
                    android:textSize="12sp"
                    android:padding="10dp"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/cutOff"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white_FF">
                <LinearLayout
                    android:id="@+id/openRootDir_ll_activity_open_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="?android:selectableItemBackground">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/fab_margin"
                        android:text="@string/text_phone"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/cutOff"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_command"
                    android:textSize="12sp"
                    android:padding="10dp"/>
            </RelativeLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/frequentFolder_rv_activity_open_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_FF">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
